feat: Centraliza regra de permissoes
